--- a/index.html
+++ b/index.html
@@ -183,6 +183,14 @@
     </section>
 
      <!-- Testimonials Section -->
+     <style type="text/css">
+       .test {
+           background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(img/tree-838667.jpg);
+           background-size: cover;
+           color: #fff;
+           background-attachment: fixed;
+       }
+      </style>
      <section class="test" id="testimonials">
        <div class="container">
           <div class="row">
@@ -195,16 +203,19 @@
               <div class="col-md-4">
                 <blockquote>
                   Omnifood is awesome! I just launched a startup which leaves me with no time for cooking, so OMnifood is a life-saver. Now that i got used to it, i can't live without my daily meals!
+                  <cite>-John Doe</cite>
                 </blockquote>
               </div>
               <div class="col-md-4">
                 <blockquote>
                   Omnifood is awesome! I just launched a startup which leaves me with no time for cooking, so OMnifood is a life-saver. Now that i got used to it, i can't live without my daily meals!
+                    <cite>-Kdot</cite>
                 </blockquote>
               </div>
               <div class="col-md-4">
                 <blockquote>
                   Omnifood is awesome! I just launched a startup which leaves me with no time for cooking, so OMnifood is a life-saver. Now that i got used to it, i can't live without my daily meals!
+                    <cite>-Groovy Q</cite>
                 </blockquote>
               </div>
             </div>
